# SteloPTC

./: .gitignore  CHANGELOG.md  DailyClaudeRoutineCheckup.md  LICENSE  README.md  ROADMAP.md  SteloPTC.md  UserManual.md  index.html  package-lock.json  package.json  skills.md  svelte.config.js  vite.config.ts  vitest.config.ts
.github/: SIGNING.md
.github/workflows/: benchmarks.yml  build-android.yml  build-ios.yml  build-windows.yml  test.yml
docs/: breeding-coordination.md  local-ai.md  merkle-checkpoints.md  merkle-proofs.md  on-chain-anchoring.md  plugin-authoring.md  regulatory-exports.md  signed-event-ledger.md  specimen-passport.md  taxonomy-registry.md  vocabulary-system.md
scripts/: setup-android.sh
src/: App.svelte  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Info.ios.plist  build.rs  tauri.conf.json
src-tauri/benches/: performance.rs
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: mod.rs  ollama.rs
src-tauri/src/anchoring/: mod.rs  store.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/cloud/: crypto.rs  mod.rs  sync.rs  targets.rs
src-tauri/src/commands/: admin.rs  ai.rs  analytics.rs  anchoring.rs  attachments.rs  audit.rs  auth.rs  backend_config.rs  backup.rs  breeding.rs  cloud_backup.rs  compliance.rs  compliance_export.rs  coordination.rs  cryo.rs  error_logs.rs  export.rs  fruiting.rs  import.rs  integrity.rs  inventory.rs  locations.rs  media.rs  mod.rs  ncbi.rs  notifications.rs  passport.rs  permissions.rs  plugins.rs  qr_scans.rs  reg_submission.rs  registry.rs  reminders.rs  sensors.rs  signed_events.rs  species.rs  specimens.rs  strains.rs  subcultures.rs  sync.rs  (+3 more)
src-tauri/src/compliance_export/: bundle.rs  mod.rs  signing.rs  zip_writer.rs
src-tauri/src/compliance_rules/: mod.rs
src-tauri/src/coordination/: mod.rs  store.rs
src-tauri/src/db/: analytics.rs  backend.rs  dashboard.rs  fixtures.rs  migrations.rs  mod.rs  notifications.rs  permissions.rs  postgres.rs  queries.rs  sensors.rs  sync.rs  vocabulary.rs  work_queue.rs
src-tauri/src/integrity/: mod.rs
src-tauri/src/models/: ai.rs  audit.rs  backend.rs  breeding.rs  compliance.rs  cryo.rs  error_log.rs  fruiting.rs  inventory.rs  location.rs  media.rs  mod.rs  notifications.rs  permissions.rs  reminder.rs  sensors.rs  species.rs  specimen.rs  strain.rs  subculture.rs  sync.rs  taxon.rs  user.rs
src-tauri/src/monitoring/: mod.rs
src-tauri/src/passport/: mod.rs  store.rs
src-tauri/src/plugins/: loader.rs  manifest.rs  mod.rs
src-tauri/src/reg_submission/: mod.rs
src-tauri/src/registry/: mod.rs  store.rs
src-tauri/src/signed_ledger/: lifecycle.rs  mod.rs
src-tauri/tests/: db_tests.rs  wp63_fixtures.rs
src-tauri/tests/fixtures/: seed_large.rs
src/lib/: api.ts  exportUtils.test.ts  exportUtils.ts  importUtils.test.ts  importUtils.ts  isTauri.ts  offlineQueue.test.ts  offlineQueue.ts  printUtils.ts  profile.test.ts  profile.ts  utils.test.ts  utils.ts
src/lib/components/: AiSettingsPanel.svelte  AnalyticsDashboard.svelte  AuditLog.svelte  BreedingCoordinationPanel.svelte  BreedingProgramManager.svelte  CloudBackupPanel.svelte  ComplianceExportWizard.svelte  ComplianceView.svelte  CryoManager.svelte  Dashboard.svelte  DataIntegrityPanel.svelte  DataState.svelte  EmptyState.svelte  ErrorLog.svelte  ExportManager.svelte  FirstRun.svelte  ForceChangePassword.svelte  FormField.svelte  FruitingOverview.svelte  HybridWizard.svelte  ImportManager.svelte  InventoryManager.svelte  LabMap.svelte  Login.svelte  MediaList.svelte  NcbiSyncPanel.svelte  Notifications.svelte  OnChainAnchorPanel.svelte  PedigreeChart.svelte  PermissionsEditor.svelte  PluginManagerPanel.svelte  ProvisionalTaxaManager.svelte  PwaInstallPrompt.svelte  QRModal.svelte  QrModal.svelte  QrScanner.svelte  ReminderList.svelte  Settings.svelte  Sidebar.svelte  SignedLedgerPanel.svelte  (+17 more)
src/lib/stores/: app.ts  auth.ts
src/lib/styles/: tokens.css
