[package]
name = "stelo-ptc"
version = "1.38.0"
description = "Plant Tissue Culture Specimen Tracking System"
authors = ["SteloPTC"]
edition = "2021"
license = "LicenseRef-Proprietary"

[lib]
name = "stelo_ptc_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "stelo-ptc"
path = "src/main.rs"

[features]
# Default build includes the full Tauri command layer (required for the desktop app).
# Disable for unit-test builds in environments without GTK/WebKit system libraries:
#   cargo test --lib --no-default-features
default = ["tauri-commands"]
tauri-commands = ["tauri", "tauri-plugin-dialog", "tauri-plugin-fs", "tauri-plugin-shell"]
# WP-50: PostgreSQL backend foundation. Off by default — SQLite remains the sole
# active backend for all read/write commands. Enabling this feature compiles a
# standalone PostgreSQL connector (db::postgres) used for connectivity testing
# and schema bootstrap only; it is not wired into the live query/command layer.
#   cargo check --no-default-features --features postgres
postgres = ["dep:sqlx"]

[build-dependencies]
# tauri-build is a pure Rust code-generator — no system libs required.
# It is always present so build.rs can reference it unconditionally;
# the #[cfg(feature = "tauri-commands")] guard in build.rs ensures
# tauri_build::build() is only invoked when the full Tauri layer is compiled.
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [], optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-fs = { version = "2", optional = true }
tauri-plugin-shell = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
bcrypt = "0.17"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
# WP-50: optional PostgreSQL connector, enabled only by the `postgres` feature.
# No `macros` feature — we deliberately avoid compile-time query checking
# (sqlx::query!) since that requires a live database at build time.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres"], optional = true }
