[package]
name = "stelo-ptc"
version = "1.45.0"
description = "Plant Tissue Culture Specimen Tracking System"
authors = ["SteloPTC"]
edition = "2021"
license = "LicenseRef-Proprietary"

[lib]
name = "stelo_ptc_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "stelo-ptc"
path = "src/main.rs"

[features]
# Default build includes the full Tauri command layer (required for the desktop app).
# Disable for unit-test builds in environments without GTK/WebKit system libraries:
#   cargo test --lib --no-default-features
default = ["tauri-commands"]
tauri-commands = ["tauri", "tauri-plugin-dialog", "tauri-plugin-fs", "tauri-plugin-shell", "tauri-plugin-notification"]
# WP-50: PostgreSQL backend foundation. Off by default — SQLite remains the sole
# active backend for all read/write commands. Enabling this feature compiles a
# standalone PostgreSQL connector (db::postgres) used for connectivity testing
# and schema bootstrap only; it is not wired into the live query/command layer.
#   cargo check --no-default-features --features postgres
postgres = ["dep:sqlx"]

[build-dependencies]
# tauri-build is a pure Rust code-generator — no system libs required.
# It is always present so build.rs can reference it unconditionally;
# the #[cfg(feature = "tauri-commands")] guard in build.rs ensures
# tauri_build::build() is only invoked when the full Tauri layer is compiled.
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [], optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-fs = { version = "2", optional = true }
tauri-plugin-shell = { version = "2", optional = true }
# WP-52: desktop push notifications. Part of the tauri-commands group (like
# dialog/fs/shell) since it's a core desktop capability, not an opt-in extra.
tauri-plugin-notification = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
bcrypt = "0.17"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
# WP-50: optional PostgreSQL connector, enabled only by the `postgres` feature.
# No `macros` feature — we deliberately avoid compile-time query checking
# (sqlx::query!) since that requires a live database at build time.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres"], optional = true }
# WP-52: SMTP email client. Kept as an always-on (non-optional) dependency —
# like bcrypt/sha2, it is pure business logic with no system dependency, so
# template-building and address-validation logic stays testable under
# --no-default-features. Actual sending requires a configured SMTP server
# (see commands::notifications::send_test_email) and cannot be unit-tested
# without one, matching the same limitation already documented for WP-50's
# PostgreSQL connector.
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls", "hostname"] }
# WP-59: zero-knowledge cloud-backup encryption. Argon2id derives the AES key from
# a user passphrase (never persisted); aes-gcm performs the actual AEAD encryption.
# Both are pure-Rust, no system crypto library dependency.
argon2 = "0.5"
aes-gcm = "0.10"
# WP-60: regulatory-export bundle signing. Ed25519 in place of the RSA-4096
# originally sketched in the ROADMAP — see migration_044_signing_keys for the
# documented rationale (smaller pure-Rust dependency, no PEM/ASN.1 tooling needed
# for a self-attested signature verified against a bundled public key).
ed25519-dalek = { version = "2", features = ["rand_core"] }
# WP-60: bundles compliance exports into a downloadable .zip. `deflate` is the
# pure-Rust (miniz_oxide) compression backend — no system zlib/bzip2 dependency.
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
# WP-63: Criterion benchmark suite (benches/performance.rs). `html_reports` is
# left off deliberately — CI treats benchmark output as a non-blocking JSON
# artifact, not a browsable report, so the extra plotters/tinytemplate deps
# aren't worth pulling in.
criterion = "0.5"

[[bench]]
name = "performance"
harness = false
